Bug #121279.  TestGtkEmbed  crash on javascript  window.close().  Don't emit DOM events after we've been destroyed. r=jst, sr,a=shaver