mozilla/embedding/browser/gtk/src/EmbedPrivate.cpp
@@ -87,6 +87,7 @@ EmbedPrivate::EmbedPrivate(void)
   mChromeLoaded     = PR_FALSE;
   mListenersAttached = PR_FALSE;
   mMozWindowWidget  = 0;
+  mIsDestroyed      = PR_FALSE;
 
   PushStartup();
   if (!sWindowList) {
@@ -267,6 +268,12 @@ EmbedPrivate::Resize(PRUint32 aWidth, PRUint32 aHeight)
 void
 EmbedPrivate::Destroy(void)
 {
+  // This flag might have been set from
+  // EmbedWindow::DestroyBrowserWindow() as well if someone used a
+  // window.close() or something or some other script action to close
+  // the window.  No harm setting it again.
+  mIsDestroyed = PR_TRUE;
+
   // Get the nsIWebBrowser object for our embedded window.
   nsCOMPtr<nsIWebBrowser> webBrowser;
   mWindow->GetWebBrowser(getter_AddRefs(webBrowser));
@@ -571,6 +578,9 @@ EmbedPrivate::ContentFinishedLoading(void)
 void
 EmbedPrivate::TopLevelFocusIn(void)
 {
+  if (mIsDestroyed)
+    return;
+
   nsCOMPtr<nsPIDOMWindow> piWin;
   GetPIDOMWindow(getter_AddRefs(piWin));
 
@@ -586,6 +596,9 @@ EmbedPrivate::TopLevelFocusIn(void)
 void
 EmbedPrivate::TopLevelFocusOut(void)
 {
+  if (mIsDestroyed)
+    return;
+
   nsCOMPtr<nsPIDOMWindow> piWin;
   GetPIDOMWindow(getter_AddRefs(piWin));
 
@@ -601,6 +614,9 @@ EmbedPrivate::TopLevelFocusOut(void)
 void
 EmbedPrivate::ChildFocusIn(void)
 {
+  if (mIsDestroyed)
+    return;
+
   nsCOMPtr<nsPIDOMWindow> piWin;
   GetPIDOMWindow(getter_AddRefs(piWin));
 
@@ -613,6 +629,9 @@ EmbedPrivate::ChildFocusIn(void)
 void
 EmbedPrivate::ChildFocusOut(void)
 {
+  if (mIsDestroyed)
+    return;
+
   nsCOMPtr<nsPIDOMWindow> piWin;
   GetPIDOMWindow(getter_AddRefs(piWin));
 
